[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Dmitry Skvortsov <dscworstsov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
